# book-mcp-server

./: .gitignore  Dockerfile  README.md  postman.json  pyproject.toml  server.py  smithery.yaml
data/: data.json
