[project]
name = "book-mcp-server"
version = "0.1.0"
description = "An MCP server exposing tools, resources, and prompts to browse, search, and recommend books from a local dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.13.0",
]

authors = [
    { name = "ZohaibCodez", email = "itxlevicodez@gmail.com" },
]

[project.urls]
homepage = "https://github.com/ZohaibCodez"
repository = "https://github.com/ZohaibCodez/book-mcp-server"
issues = "https://github.com/ZohaibCodez/book-mcp-server/issues"

